# bevy-with-friends-

./: Cargo.toml  editor.ron  index.html
lightyear/: Cargo.toml
lightyear/book/src/: SUMMARY.md  introduction.md
lightyear/lightyear/: Cargo.toml
src/: main.rs  utils.rs
src/defender_game/: components.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs  utils.rs
src/lightyear_demo/: client.rs  components.rs  components_old.rs  demo.rs  mod.rs  server.rs  shared.rs  shared_old.rs  systems.rs
src/lightyear_demo/systems/: buffer_input.rs  cause_mis_predictions.rs  draw_circle_view.rs  handle_connections.rs  handle_pawn_input_client.rs  handle_pawn_input_server.rs  handle_pawn_movement.rs  handle_pawn_shooting.rs  handle_projectile.rs  mod.rs
src/netcode/: components.rs  mod.rs  my_fixed_update_demo.rs  plugin.rs  resources.rs  systems.rs
src/netcode_extensions/: components.rs
src/space_game/: config.rs  mod.rs  plugin.rs
src/space_game/components/: ship.rs
