[package]
name = "bevy_game" # ToDo
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0



[dependencies]
bevy = { version = "0.12.0",features = ["dynamic_linking"] }
bevy_rapier2d = "0.23.0"
bevy-inspector-egui = "0.21.0"
bevy_vector_shapes = "0.6.0"
bevy_framepace = "0.14.1"